--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+
+$color-bg-light: #f1f5f4;
+$color-bg-dark: #3f5252;
+$color-text-black: #1c1b29;
+$color-text-gray: #504f5e;
+$color-red: #cd4d31;
+////
+
+$main-color: #f1f5f4;
+$main-dark-color: #3f5252;
+$secondary-color: #cd4d31;
+$some-color: #1c1b29;
+$tertiary-color: #504f5e;
