--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,44 @@
-h1 {
-  @extend %h1;
+.text-main {
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+
+  &--red {
+    color: $color-red;
+  }
+
+  &--events {
+    font-size: 14px;
+    font-weight: 200;
+    line-height: 20px;
+  }
+
+  &--gray {
+    color: $color-text-gray;
+  }
+}
+
+.text-title {
+  font-family: "Playfair Display", serif;
+  font-size: 48px;
+  font-weight: 700;
+
+  &--smaller {
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  &--small {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  &--big {
+    font-size: 96px;
+  }
+}
+
+.text-description {
+  line-height: 24px;
+  color: $color-text-gray;
 }
