updated file structure and svg

--- a/src/styles/modules/main.scss
+++ b/src/styles/modules/main.scss
@@ -22,7 +22,7 @@
 
       content: "";
 
-      background-image: url(/images/main-image.png);
+      background-image: url(/images/general/main.png);
       background-repeat: no-repeat;
 
       z-index: 1;
