--- a/src/styles/modules/visit.scss
+++ b/src/styles/modules/visit.scss
@@ -36,7 +36,7 @@
     width: 746px;
     height: 800px;
 
-    background-image: url(/images/visit.png);
+    background-image: url(/images/general/visit.png);
     background-size: contain;
     background-repeat: no-repeat;
   }
