--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -1,6 +1,6 @@
 .header {
-  background-color: $main-dark-color;
-  color: $color-bg-light;
+  background-color: $color-dark;
+  color: $color-light;
 
   &__container {
     display: flex;
