--- a/src/styles/modules/visit.scss
+++ b/src/styles/modules/visit.scss
@@ -2,8 +2,8 @@
   position: relative;
   height: 800px;
 
-  background-color: $color-bg-dark;
-  color: $color-bg-light;
+  background-color: $color-dark;
+  color: $color-light;
 
   &__container {
     padding: 190px 0 160px;
