--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,26 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
-  }
-}
+//@mixin hover($_property, $_toValue) {
+//  transition: #{$_property} 0.3s;
+//  &:hover {
+//    #{$_property}: $_toValue;
+//  }
+//}
+
+//
+//@mixin box($width, $height: $width) {
+//  width: $width;
+//  height: $height;
+//}
+
+//
+//@mixin placeholder {
+//  ::-webkit-input-placeholder {@content}
+//  :-moz-placeholder           {@content}
+//  ::-moz-placeholder          {@content}
+//  :-ms-input-placeholder      {@content}
+//}
+
+//@mixin pseudo($display: block, $pos: absolute, $content: ''){
+//  content: $content;
+//  display: $display;
+//  position: $pos;
+//}
