--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -14,7 +14,7 @@
   }
 
   &--gray {
-    color: $color-text-gray;
+    color: $color-gray;
   }
 }
 
@@ -40,5 +40,5 @@
 
 .text-description {
   line-height: 24px;
-  color: $color-text-gray;
+  color: $color-gray;
 }
