--- a/src/styles/modules/events.scss
+++ b/src/styles/modules/events.scss
@@ -45,7 +45,7 @@
     font-family: "Playfair Display", serif;
     font-weight: 700;
     font-style: normal;
-    color: $color-bg-light;
+    color: $color-light;
     margin-bottom: 10px;
     font-size: 55px;
     line-height: 55px;
