--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  background-color: $color-bg-dark;
-  color: $color-bg-light;
+  background-color: $color-dark;
+  color: $color-light;
   padding: 0 55px;
 
   &__container {
@@ -44,7 +44,7 @@
   }
 
   &__link {
-    color: $color-bg-light;
+    color: $color-light;
     text-decoration: none;
     font-weight: 400;
     line-height: 24px;
