--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,8 +5,8 @@
 body {
   font-size: 16px;
   font-family: "Raleway", sans-serif;
-  background-color: $color-bg-light;
-  color: $some-color;
+  background-color: $color-light;
+  color: $color-black;
 }
 
 .container {
@@ -24,6 +24,6 @@ body {
   width: 270px;
 
   color: #fff;
-  background-color: $secondary-color;
+  background-color: $color-red;
   text-decoration: none;
 }
