--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -1,6 +1,35 @@
-//@font-face {
-//  font-family: "Roboto";
-//  src: url("../../fonts/Roboto-Regular-webfont.woff") format("woff");
-//  font-weight: normal;
-//  font-style: normal;
-//}
+@font-face {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 200;
+  src: local(""),
+    url("../fonts/raleway-v18-latin_cyrillic-ext_cyrillic-200.woff2") format("woff2"),
+    url("../fonts/raleway-v18-latin_cyrillic-ext_cyrillic-200.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("../fonts/raleway-v18-latin_cyrillic-ext_cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/raleway-v18-latin_cyrillic-ext_cyrillic-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("../fonts/playfair-display-v21-latin_cyrillic-regular.woff2") format("woff2"),
+    url("../fonts/playfair-display-v21-latin_cyrillic-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""),
+    url("../fonts/playfair-display-v21-latin_cyrillic-700.woff2") format("woff2"),
+    url("../fonts/playfair-display-v21-latin_cyrillic-700.woff") format("woff");
+}
