--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,13 +1,40 @@
-
-$color-bg-light: #f1f5f4;
-$color-bg-dark: #3f5252;
-$color-text-black: #1c1b29;
-$color-text-gray: #504f5e;
+// Colors:
+$color-light: #f1f5f4;
+$color-dark: #3f5252;
+$color-black: #1c1b29;
+$color-gray: #504f5e;
 $color-red: #cd4d31;
-////
 
-$main-color: #f1f5f4;
-$main-dark-color: #3f5252;
-$secondary-color: #cd4d31;
-$some-color: #1c1b29;
-$tertiary-color: #504f5e;
+// Sizes:
+//$main-font-size: 16px;
+
+//$content-size: 1170px;
+//$tablet-size: 1239px;
+//$phone-size: 767px;
+
+// Breakpoints:
+//$breakpoints: ("phone": 400px,
+//  "phone-wide": 480px,
+//  "phablet": 560px,
+//  "tablet-small": 640px,
+//  "tablet": 768px,
+//  "tablet-wide": 1024px,
+//  "desktop": 1248px,
+//  "desktop-wide": 1440px);
+
+//// Fonts
+//$main-font: "source_sans_proregular",
+//Arial,
+//sans-serif;
+//
+//$bold-font: "source_sans_prosemibold",
+//Arial,
+//sans-serif;
+//
+//$bolder-font: "source_sans_probold",
+//Arial,
+//sans-serif;
+//
+//$boldest-font: "source_sans_problack",
+//Arial,
+//sans-serif;
