--- a/src/styles/modules/main.scss
+++ b/src/styles/modules/main.scss
@@ -1,6 +1,5 @@
 .main {
-  background-color: $color-dark;
-  color: $color-light;
+  @include dark-background;
 
   &__container {
     position: relative;
@@ -9,7 +8,6 @@
     justify-content: center;
 
     height: 720px;
-    padding: 0 55px;
 
     &::before {
       position: absolute;
@@ -27,10 +25,6 @@
 
       z-index: 1;
     }
-  }
-
-  & > * {
-    margin-bottom: 10px;
   }
 
   &__text-block {
