--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,29 +1,86 @@
-@import "../../node_modules/reset-css/sass/reset";
 @import "utils/utils";
-@import "modules/modules";
 
-body {
-  font-size: 16px;
-  font-family: "Raleway", sans-serif;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: $size-base;
+  font-family: $font-base;
   background-color: $color-light;
   color: $color-black;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  scroll-behavior: smooth;
 }
 
 .container {
-  max-width: 1170px;
-  //height: 100%;
-  margin: auto;
+  margin: 0 auto;
+  max-width: $size-content;
+  padding: 0 55px;
+  width: 100%;
 }
 
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  height: 60px;
-  width: 270px;
-
-  color: #fff;
-  background-color: $color-red;
-  text-decoration: none;
+// Normalized:
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video,
+textarea {
+  vertical-align: middle;
+}
+
+textarea {
+  resize: none;
+}
+
+section {
+  position: relative;
+}
+
+input,
+select,
+button {
+  outline: none;
+}
+
+@import "modules/modules";
