--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,35 +6,19 @@ $color-gray: #504f5e;
 $color-red: #cd4d31;
 
 // Sizes:
-//$main-font-size: 16px;
-
-//$content-size: 1170px;
-//$tablet-size: 1239px;
-//$phone-size: 767px;
+$size-base: 16px;
+$size-content: 1280px;
 
 // Breakpoints:
-//$breakpoints: ("phone": 400px,
-//  "phone-wide": 480px,
-//  "phablet": 560px,
-//  "tablet-small": 640px,
-//  "tablet": 768px,
-//  "tablet-wide": 1024px,
-//  "desktop": 1248px,
-//  "desktop-wide": 1440px);
+$breakpoints: ("phone": 400px,
+"phone-wide": 480px,
+"phablet": 560px,
+"tablet-small": 640px,
+"tablet": 768px,
+"tablet-wide": 1024px,
+"desktop": 1248px,
+"desktop-wide": 1440px);
 
-//// Fonts
-//$main-font: "source_sans_proregular",
-//Arial,
-//sans-serif;
-//
-//$bold-font: "source_sans_prosemibold",
-//Arial,
-//sans-serif;
-//
-//$bolder-font: "source_sans_probold",
-//Arial,
-//sans-serif;
-//
-//$boldest-font: "source_sans_problack",
-//Arial,
-//sans-serif;
+// Fonts
+$font-base: "Raleway", sans-serif;
+$font-title: "Playfair Display", serif;
