--- a/src/styles/modules/buttons.scss
+++ b/src/styles/modules/buttons.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
 
-  height: 60px;
+  padding: 22px 0;
   width: 270px;
 
   color: $color-light;
