--- a/src/styles/modules/modules.scss
+++ b/src/styles/modules/modules.scss
@@ -3,7 +3,7 @@
 @import "exhibition";
 @import "footer";
 @import "header";
-@import "info-block";
+@import "article";
 @import "main";
 @import "news";
 @import "buttons";
