index html cleaned up

--- a/src/styles/modules/decoration.scss
+++ b/src/styles/modules/decoration.scss
@@ -19,10 +19,10 @@
       width: 100%;
       height: 100%;
 
-      font-family: "Playfair Display", serif;
+      font-family: $font-title;
       word-wrap: break-word;
       font-style: normal;
-      font-weight: bold;
+      font-weight: 700;
       font-size: 144px;
       line-height: 100%;
       text-transform: uppercase;
