--- a/src/styles/modules/article.scss
+++ b/src/styles/modules/article.scss
@@ -1,16 +1,13 @@
 .article {
   display: flex;
   flex-direction: column;
+  max-width: 380px;
 
-  &--events {
+  &--wide {
     max-width: 480px;
   }
 
-  &--exhibition {
-    max-width: 380px;
-  }
-
-  &--middle {
+  &--float-r {
     float: right;
   }
 
@@ -20,21 +17,30 @@
     &--exception {
       position: relative;
       left: -100px;
-      font-family: "Playfair Display", serif;
-      font-weight: 700;
-      font-size: 48px;
+
+      @include text-title;
       line-height: 57.6px;
       color: $color-red;
       margin-bottom: 20px;
     }
+
+    &--red {
+      color: $color-red;
+    }
   }
 
   &__title {
+    @include text-title--small;
     margin-bottom: 20px;
+
+    &--smallest {
+      @include text-title--smallest;
+    }
   }
 
-  &__description {
+  &__details {
     margin-bottom: 55px;
+    color: $color-gray;
   }
 
   &__image {
