--- a/src/styles/modules/basic.scss
+++ b/src/styles/modules/basic.scss
@@ -32,7 +32,11 @@
     margin-bottom: 110px;
   }
 
-  &__descr {
+  &__title {
+    @include text-title--big;
+  }
+
+  &__details {
     display: block;
     margin-top: 40px;
     margin-bottom: 60px;
@@ -63,7 +67,7 @@
     }
   }
 
-  &__img-descr {
+  &__label {
     position: absolute;
     top: 50%;
     right: 4%;
