--- a/src/styles/modules/events.scss
+++ b/src/styles/modules/events.scss
@@ -2,6 +2,7 @@
   padding: 260px 0 185px;
 
   &__header {
+    @include text-title;
     position: relative;
     left: -40px;
     text-align: center;
