--- a/src/styles/modules/modules.scss
+++ b/src/styles/modules/modules.scss
@@ -4,7 +4,7 @@
 @import "footer";
 @import "header";
 @import "article";
-@import "main";
+@import "basic";
 @import "news";
 @import "buttons";
 @import "subscribe";
