--- a/src/styles/modules/visit.scss
+++ b/src/styles/modules/visit.scss
@@ -4,6 +4,7 @@
   padding: 190px 0 160px;
 
   &__title {
+    @include text-title--big;
     margin-bottom: 60px;
     position: relative;
     left: 40%;
@@ -18,7 +19,7 @@
     width: 470px;
   }
 
-  &__description {
+  &__details {
     margin-bottom: 60px;
   }
 
