--- a/src/styles/modules/article.scss
+++ b/src/styles/modules/article.scss
@@ -27,6 +27,11 @@
     &--red {
       color: $color-red;
     }
+
+    &--small {
+      font-size: 14px;
+      font-weight: 200;
+    }
   }
 
   &__title {
