--- a/src/styles/modules/sandwich.scss
+++ b/src/styles/modules/sandwich.scss
@@ -28,6 +28,7 @@
       left: 0;
       bottom: $sandwich-spacing;
 
+      display: block;
       width: $sandwich-width;
       height: $sandwich-height;
 
@@ -42,6 +43,7 @@
       left: 0;
       top: $sandwich-spacing;
 
+      display: block;
       width: $sandwich-width;
       height: $sandwich-height;
 
