--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@
 html {
   font-size: $size-base;
   font-family: $font-base;
+  line-height: 24px;
 
   background-color: $color-light;
   color: $color-black;
