--- a/src/styles/modules/article.scss
+++ b/src/styles/modules/article.scss
@@ -49,7 +49,16 @@
   }
 
   &__image {
-    margin-bottom: 30px;
     @include box(370px);
+    margin-bottom: 30px;
+    object-fit: cover;
+
+    transition: transform 0.35s ease-in-out, border-radius 0.4s ease-in-out;
+
+    &:hover {
+      transform: scale(1.02);
+      border-radius: 8px;
+      cursor: pointer;
+    }
   }
 }
