--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -2,6 +2,10 @@
   @include dark-background;
   padding: 160px 0 60px;
 
+  &__container {
+    position: relative;
+  }
+
   &__row {
     display: flex;
     justify-content: center;
@@ -44,6 +48,12 @@
     text-decoration: none;
     font-weight: 400;
     line-height: 24px;
+
+    transition: color 0.15s ease-out;
+
+    &:hover {
+      color: $color-red-hover;
+    }
   }
 
   &__media {
@@ -64,5 +74,25 @@
     display: flex;
     flex-direction: column;
     margin-left: 5px;
+  }
+
+  &__icon {
+    transition: transform 0.35s ease-out;
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
+  &__button {
+    position: absolute;
+    top: 0;
+    right: 50px;
+
+    animation: 1s linear 0s infinite alternate jumping;
+  }
+
+  &__button-image {
+    cursor: pointer;
+    transform: rotate(-90deg);
   }
 }
