--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -13,6 +13,11 @@
     align-items: center;
     width: 123px;
     height: 40px;
+    transition: transform 0.4s linear;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__tools {
