--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@ html {
   font-size: $size-base;
   font-family: $font-base;
   line-height: 24px;
+  scroll-behavior: smooth;
 
   background-color: $color-light;
   color: $color-black;
