--- a/src/styles/modules/events.scss
+++ b/src/styles/modules/events.scss
@@ -1,12 +1,26 @@
 .events {
   padding: 260px 0 185px;
 
+  @media screen and (max-width: 1023px) {
+    padding: 0 0 115px;
+  }
+
   &__header {
     @include text-title;
     position: relative;
     left: -40px;
     text-align: center;
     margin-bottom: 65px;
+
+    @media screen and (max-width: 1023px) {
+      left: 0;
+      text-align: left;
+    }
+
+    @media screen and (max-width: 767px) {
+      font-size: 36px;
+      line-height: 45px;
+    }
   }
 
   &__item {
@@ -25,11 +39,35 @@
 
   &__wrapper {
     display: flex;
+
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+    }
   }
 
   &__datetime {
     margin-left: 50px;
     width: 170px;
+
+    @media screen and (max-width: 1199px) {
+      margin-left: 10px;
+    }
+  }
+
+  &__datatime-small {
+    @media screen and (max-width: 767px) {
+      display: flex;
+    }
+  }
+
+  &__datatime-mini {
+    display: none;
+    
+    @media screen and (max-width: 767px) {
+      display: block;
+      margin-right: 20px;
+      color: $color-red;
+    }
   }
 
   &__date {
@@ -47,6 +85,10 @@
     margin-bottom: 10px;
     font-size: 55px;
     line-height: 55px;
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 
   &__time {
@@ -58,5 +100,23 @@
     color: $color-red;
     font-size: 36px;
     line-height: 36px;
+
+    @media screen and (max-width: 1199px) {
+      left: 20px;
+    }
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
+  }
+
+  &__image {
+    @media screen and (max-width: 1199px) {
+      width: 300px;
+    }
+
+    @media screen and (max-width: 1023px) {
+      display: none;
+    }
   }
 }
