--- a/src/styles/modules/footer.scss
+++ b/src/styles/modules/footer.scss
@@ -2,6 +2,10 @@
   @include dark-background;
   padding: 160px 0 60px;
 
+  @media screen and (max-width: 1023px) {
+    padding: 120px 0 35px;
+  }
+
   &__container {
     position: relative;
   }
@@ -10,10 +14,22 @@
     display: flex;
     justify-content: center;
     margin-bottom: 75px;
+
+    @media screen and (max-width: 1023px) {
+      flex-wrap: wrap;
+    }
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 0;
+    }
   }
 
   &__col {
-    width: 280px;
+    min-width: 265px;
+
+    @media screen and (max-width: 1023px) {
+      margin-bottom: 60px;
+    }
 
     &:not(:last-child) {
       margin-right: 20px;
@@ -34,8 +50,15 @@
     justify-content: center;
     align-items: center;
 
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+    }
+
     span {
       margin-right: 40px;
+      @media screen and (max-width: 767px) {
+        margin-right: 0;
+      }
     }
   }
 
