--- a/src/styles/modules/select.scss
+++ b/src/styles/modules/select.scss
@@ -10,6 +10,10 @@
   cursor: pointer;
   z-index: 20;
 
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
   &__lang {
     margin-right: 5px;
   }
