--- a/src/styles/modules/article.scss
+++ b/src/styles/modules/article.scss
@@ -3,8 +3,19 @@
   flex-direction: column;
   max-width: 380px;
 
+  &--exception {
+    @media screen and (max-width: 1023px) {
+      position: relative;
+      left: -130px;
+    }
+  }
+
   &--wide {
     max-width: 480px;
+
+    @media screen and (max-width: 1023px) {
+      max-width: 100%;
+    }
   }
 
   &--float-r {
@@ -54,6 +65,14 @@
     object-fit: cover;
 
     transition: transform 0.35s ease-in-out, border-radius 0.4s ease-in-out;
+
+    @media screen and (max-width: 1199px) {
+      height: 300px;
+    }
+
+    @media screen and (max-width: 1023px) {
+      height: 270px;
+    }
 
     &:hover {
       transform: scale(1.02);
