--- a/src/styles/modules/header.scss
+++ b/src/styles/modules/header.scss
@@ -2,10 +2,22 @@
   @include dark-background;
   padding: 20px 0 30px;
 
+  @media screen and (max-width: 1023px) {
+    padding: 15px 0;
+  }
+
   &__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media screen and (max-width: 1023px) {
+      padding: 0 55px;
+    }
+
+    @media screen and (max-width: 767px) {
+      padding: 0 20px;
+    }
   }
 
   &__logo {
