--- a/src/styles/modules/news.scss
+++ b/src/styles/modules/news.scss
@@ -1,22 +1,54 @@
 .news {
   padding: 120px 0 180px;
 
+  @media screen and (max-width: 1023px) {
+    padding: 120px 0 115px;
+  }
+
+  @media screen and (max-width: 767px) {
+    padding: 80px 0;
+  }
+
   &__header {
     @include text-title;
     text-align: center;
     position: relative;
     left: -200px;
+
+    @media screen and (max-width: 767px) {
+      position: static;
+      text-align: left;
+      font-size: 36px;
+    }
   }
 
   &__items {
     display: flex;
     margin-top: 75px;
     margin-bottom: 95px;
+
+    @media screen and (max-width: 767px) {
+      margin-top: 60px;
+      margin-bottom: 0;
+    }
   }
 
   &__item {
     &:not(:last-child) {
       margin-right: 30px;
+    }
+
+    //FIX IT WITH SLIDER:
+    &:nth-child(3) {
+      @media screen and (max-width: 1023px) {
+        display: none;
+      }
+    }
+
+    &:nth-child(2) {
+      @media screen and (max-width: 767px) {
+        display: none;
+      }
     }
   }
 
