--- a/src/styles/modules/visit.scss
+++ b/src/styles/modules/visit.scss
@@ -3,12 +3,39 @@
   height: 800px;
   padding: 190px 0 160px;
 
+  @media screen and (max-width: 1023px) {
+    padding: 120px 0 160px;
+  }
+
+  @media screen and (max-width: 767px) {
+    height: auto;
+    padding: 80px 0;
+  }
+
   &__title {
     @include text-title--big;
     margin-bottom: 60px;
     position: relative;
     left: 40%;
     width: 700px;
+
+    @media screen and (max-width: 1199px) {
+      font-size: 72px;
+      width: 615px;
+    }
+
+    @media screen and (max-width: 1023px) {
+      left: 0;
+    }
+
+    @media screen and (max-width: 767px) {
+      position: static;
+      width: auto;
+      margin-bottom: 40px;
+
+      font-size: 48px;
+      line-height: 48px;
+    }
   }
 
   &__info {
@@ -17,6 +44,16 @@
     display: flex;
     flex-direction: column;
     width: 470px;
+
+    @media screen and (max-width: 1023px) {
+      left: 40%;
+      max-width: 370px;
+    }
+
+    @media screen and (max-width: 767px) {
+      position: static;
+      width: auto;
+    }
   }
 
   &__details {
@@ -34,5 +71,17 @@
     background-image: url(/images/general/visit.png);
     background-size: contain;
     background-repeat: no-repeat;
+
+    @media screen and (max-width: 1199px) {
+      height: 700px;
+    }
+
+    @media screen and (max-width: 1023px) {
+      height: 500px;
+    }
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 }
